<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="go.and.fast.com.fastandgo.mainMenu.MainMenu">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/food_layout"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:alpha="0.8"
                android:background="@drawable/fastfood"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/food_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fast_food"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/shopping_layout"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:alpha="0.8"
                android:background="@drawable/shopping"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/shopping_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:layout_weight="1"
                        android:text="@string/shopping"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/transpo_layout"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:alpha="0.8"
                android:background="@drawable/transportation"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/transpo_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:text="@string/transport"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/payment_layout"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:alpha="0.8"
                android:background="@drawable/billpayment"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <TextView
                        android:id="@+id/payment_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:layout_weight="1"
                        android:text="@string/bills_payment"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/medicine_layout"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:alpha="0.8"
                android:background="@drawable/medicine"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/medicine_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:layout_weight="1"
                        android:text="@string/medicines"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
